Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
@@ -27,6 +27,10 @@
 
   .product-inner-container {
     padding: 0 2%;
+    margin-bottom: 30px;
+    @media (min-width: $screen-xs-min) {
+      margin-bottom: 100px;
+    }
   }
 
   .product-img-container {
